Remove ID from swap card div in dashboard
The specific id "proxy-AT-US-LA1-1012" was removed from a div of class "swap_crd--wrap" in dashboard.html. It has been made class only for consistency and to avoid potential interface issues due to unique IDs. This simplifies the CSS and makes the code more maintainable.

--- a/dashboard.html
+++ b/dashboard.html
@@ -237,7 +237,7 @@ input[type=number] {
               </div>
               <div class="column-15 w-col w-col-1"><img src="images/switch-horizontal-01.svg" loading="lazy" alt="" class="image-15"></div>
               <div class="column-13 w-col w-col-4">
-                <div id="proxy-AT-US-LA1-1012" class="swap_crd--wrap">
+                <div class="swap_crd--wrap">
                   <div class="swap_crd--inner">
                     <div class="swap_crd_tit--wrap">
                       <div class="swap_crd_tit--inner w-clearfix">
