Remove 'hide' class from page_loader divs
'Hide' class has been removed from the page_loader divs on several HTML files. This change was aligned with a design decision to always display the loading screen until the entire page has finished rendering, enhancing user experience by preventing rendering of partially loaded page.

--- a/public/funds.html
+++ b/public/funds.html
@@ -59,7 +59,7 @@
   <link rel="stylesheet" href="https://styles.illusory.io/pages/funds/funds.full.css">
 </head>
 <body class="body dark">
-  <div class="w-layout-blockcontainer page_loader--contain hide w-container">
+  <div class="w-layout-blockcontainer page_loader--contain w-container">
     <div class="loader--wrp">
       <div class="dvd_box"><img src="images/illusory-icon-circle-50.svg" loading="lazy" width="30" alt="" class="eye">
         <div class="page_loader--text">Loading</div>
