--- a/public/settings/account.html
+++ b/public/settings/account.html
@@ -188,7 +188,7 @@ input[type=number] {
 </style> -->
 </head>
 <body class="body dark">
-  <div class="w-layout-blockcontainer page_loader--contain w-container">
+  <div class="w-layout-blockcontainer page_loader--contain hide w-container">
     <div class="loader--wrp">
       <div class="dvd_box"><img src="../images/illusory-icon-circle-50.svg" loading="lazy" width="30" alt="" class="eye">
         <div class="page_loader--text">Loading</div>
