--- a/public/settings/member.html
+++ b/public/settings/member.html
@@ -66,7 +66,7 @@
       </div>
     </div>
   </div>
-  <div class="body_content visible">
+  <div class="body_content">
     <div page_content="member_setting" class="page_content--container hide">
       <div id="nav_sb" class="nav_sb">
         <div class="w-layout-blockcontainer top_nav--wrp w-container">
