Fix visibility issue for 'sign_up_wrp' and 'sign_in_wrp' in sign-up and sign-in pages
Previously, the divs 'sign_up_wrp' and 'sign_in_wrp' on the sign-up and sign-in pages respectively had a forced opacity of 0. This seemed to hamper the visibility of important div elements upon initial page loading leading to an undesirable user experience. In this commit, the forced opacity has been removed which should ensure smoother rendering and correct visibility of these elements right from the start.

--- a/public/sign-in.html
+++ b/public/sign-in.html
@@ -59,10 +59,10 @@
   <link rel="stylesheet" href="https://styles.illusory.io/pages/sign-in/sign-in.full.css">
 </head>
 <body class="body dark">
-  <div class="body_content">
+  <div class="body_content" style="display: block">
     <div class="sect_crds_content--container">
       <div checkout_container="amount" class="sect_content">
-        <div data-w-id="0e400b73-dae2-0caf-82f8-25956de51064" style="opacity:0" class="sign_in_wrp">
+        <div class="sign_in_wrp">
           <div id="sign-in" class="sign_in_crd"></div>
         </div>
       </div>
