--- a/public/sign-up.html
+++ b/public/sign-up.html
@@ -62,7 +62,7 @@
   <div class="body_content">
     <div class="sect_crds_content--container">
       <div checkout_container="amount" class="sect_content margtneg25">
-        <div data-w-id="0e400b73-dae2-0caf-82f8-25956de51064" style="opacity:0" class="sign_up_wrp">
+        <div class="sign_up_wrp">
           <div id="sign-up" class="sign_up_crd"></div>
           <div class="sign_up_terms_wrp">
             <div class="sect_crd_subtxt terms">By signing up, you agree to the <a href="https://illusory.io/license" class="terms_link"><span>Terms of Service</span></a><br> and <a href="https://illusory.io/dpa" class="terms_link"><span>Data Processing Agreement</span></a>
