Updated stylesheet and script URLs across multiple files
The stylesheet and script URLs in several HTML files were corrected. Previously, these were referencing incomplete paths which would have likely resulted in broken styles and non-functional JavaScript on the live site. Now, the stylesheets and scripts should be correctly linked and fully functional. By ensuring the correct paths were set, this will prevent potential 404 errors and enhance user experience.

--- a/public/index.html
+++ b/public/index.html
@@ -56,7 +56,7 @@
   }
 </script>
 <script type="application/javascript" src="https://api.ipify.org?format=jsonp&callback=getIP"></script> -->
-  <link rel="stylesheet" href="https://styles.illusory.io/pages/start/start.full.css">
+  <link rel="stylesheet" href="https://styles.illusory.io/public/css/pages/start.full.css">
 </head>
 <body class="body dark">
   <div class="w-layout-blockcontainer page_loader--contain hide w-container">
@@ -419,6 +419,6 @@ $("#signOutLink").click(function () {
   window.location.replace("/");
 });
 </script>
-  <script src="https://scripts.illusory.io/pages/start/start.full.js"></script>
+  <script src="https://scripts.illusory.io/public/scripts/pages/start.full.js"></script>
 </body>
 </html>
