Update stylesheet URLs in multiple files
Corrected the incomplete path in the StyleSheet URLs across several HTML files to prevent potential 404 errors and enhance user experience. The incorrect paths could lead to broken styles and non-functional scripts. Now, the stylesheets should be correctly linked and fully functional.

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -56,7 +56,7 @@
   }
 </script>
 <script type="application/javascript" src="https://api.ipify.org?format=jsonp&callback=getIP"></script> -->
-  <link rel="stylesheet" href="https://styles.illusory.io/public/css/pages/dashboard.full.css">
+  <link rel="stylesheet" href="https://styles.illusory.io/public/css/dashboard.full.css">
   <!-- -<script type="text/javascript" src="https://scripts.illusory.io/pages/dashboard/dashResize.full.js"></script> -->
   <!-- <style>
 .hdr {
