--- a/public/new.html
+++ b/public/new.html
@@ -56,7 +56,7 @@
   }
 </script>
 <script type="application/javascript" src="https://api.ipify.org?format=jsonp&callback=getIP"></script> -->
-  <link rel="stylesheet" href="https://styles.illusory.io/public/css/pages/new.full.css">
+  <link rel="stylesheet" href="https://styles.illusory.io/public/css/new.full.css">
 </head>
 <body class="body dark">
   <div class="w-layout-blockcontainer page_loader--contain hide w-container">
