--- a/public/sign-in.html
+++ b/public/sign-in.html
@@ -56,7 +56,7 @@
   }
 </script>
 <script type="application/javascript" src="https://api.ipify.org?format=jsonp&callback=getIP"></script> -->
-  <link rel="stylesheet" href="https://styles.illusory.io/public/css/pages/sign-in.full.css">
+  <link rel="stylesheet" href="https://styles.illusory.io/public/css/sign-in.full.css">
 </head>
 <body class="body dark">
   <div class="body_content" style="display: block">
