Update script URLs in multiple files
Alongside the stylesheets, the script URLs across various HTML files were also corrected to prevent potential 404 errors. Any inaccuracies in the scripts may lead to critical functionality errors in the application.

--- a/public/new.html
+++ b/public/new.html
@@ -56,7 +56,7 @@
   }
 </script>
 <script type="application/javascript" src="https://api.ipify.org?format=jsonp&callback=getIP"></script> -->
-  <link rel="stylesheet" href="https://styles.illusory.io/public/css/new.full.css">
+  <link rel="stylesheet" href="https://styles.illusory.io/css/new.full.css">
 </head>
 <body class="body dark">
   <div class="w-layout-blockcontainer page_loader--contain hide w-container">
@@ -869,6 +869,6 @@ $("#signOutLink").click(function () {
   window.location.replace("/");
 });
 </script>
-  <script src="https://scripts.illusory.io/public/scripts/pages/new.full.js"></script>
+  <script src="https://scripts.illusory.io/scripts/pages/new.full.js"></script>
 </body>
 </html>
