--- a/public/sign-up.html
+++ b/public/sign-up.html
@@ -56,7 +56,7 @@
   }
 </script>
 <script type="application/javascript" src="https://api.ipify.org?format=jsonp&callback=getIP"></script> -->
-  <link rel="stylesheet" href="https://styles.illusory.io/public/css/sign-up.full.css">
+  <link rel="stylesheet" href="https://styles.illusory.io/css/sign-up.full.css">
 </head>
 <body class="body dark">
   <div class="body_content">
@@ -185,6 +185,6 @@ $("#signOutLink").click(function () {
   window.location.replace("/");
 });
 </script>
-  <script src="https://scripts.illusory.io/public/scripts/pages/sign-up.full.js"></script>
+  <script src="https://scripts.illusory.io/scripts/pages/sign-up.full.js"></script>
 </body>
 </html>
