--- a/public/creating-account.html
+++ b/public/creating-account.html
@@ -56,7 +56,7 @@
   }
 </script>
 <script type="application/javascript" src="https://api.ipify.org?format=jsonp&callback=getIP"></script> -->
-  <link rel="stylesheet" href="https://styles.illusory.io/public/css/creating-account.full.css">
+  <link rel="stylesheet" href="https://styles.illusory.io/css/creating-account.full.css">
 </head>
 <body class="body dark">
   <div class="w-layout-blockcontainer page_loader--contain hide w-container">
@@ -216,6 +216,6 @@ $("#signOutLink").click(function () {
   window.location.replace("/");
 });
 </script>
-  <script src="https://scripts.illusory.io/public/scripts/pages/creating-account.full.js"></script>
+  <script src="https://scripts.illusory.io/scripts/pages/creating-account.full.js"></script>
 </body>
 </html>
