--- a/public/settings/account.html
+++ b/public/settings/account.html
@@ -56,7 +56,7 @@
   }
 </script>
 <script type="application/javascript" src="https://api.ipify.org?format=jsonp&callback=getIP"></script> -->
-  <link rel="stylesheet" href="https://styles.illusory.io/public/css/account.full.css">
+  <link rel="stylesheet" href="https://styles.illusory.io/css/account.full.css">
   <!-- -<script type="text/javascript" src="https://scripts.illusory.io/pages/dashboard/dashResize.full.js"></script> -->
   <!-- <style>
 .hdr {
@@ -278,7 +278,7 @@ $("#signOutLink").click(function () {
   window.location.replace("/");
 });
 </script>
-  <script src="https://scripts.illusory.io/public/scripts/pages/account.full.js"></script>
+  <script src="https://scripts.illusory.io/scripts/pages/account.full.js"></script>
   <script>
 $(document).ready(function () {
   const targetElement = document.querySelector(".bdy_v2");
