--- a/public/settings/member.html
+++ b/public/settings/member.html
@@ -56,7 +56,7 @@
   }
 </script>
 <script type="application/javascript" src="https://api.ipify.org?format=jsonp&callback=getIP"></script> -->
-  <link rel="stylesheet" href="https://styles.illusory.io/public/css/members.full.css">
+  <link rel="stylesheet" href="https://styles.illusory.io/css/members.full.css">
 </head>
 <body class="body dark">
   <div class="w-layout-blockcontainer page_loader--contain hide w-container">
@@ -570,7 +570,7 @@ $("#signOutLink").click(function () {
   window.location.replace("/");
 });
 </script>
-  <script src="https://scripts.illusory.io/public/scripts/pages/members.full.js"></script>
+  <script src="https://scripts.illusory.io/scripts/pages/members.full.js"></script>
   <script>
 $(document).ready(function () {
   const targetElement = document.querySelector(".bdy_v2");
