--- a/public/settings/developers.html
+++ b/public/settings/developers.html
@@ -367,7 +367,7 @@ input[type=number] {
         </div>
         <div id="w-node-fac7a1c4-2b05-b6ea-dc6a-374dbd6bd7bf-e648c042" class="alert_small_grid_item right">
           <div class="btn_ldr_wrp w-embed">
-            <lottie-player class="lottie_btn_ldr _17_2" err_item_ldr="realtime" src="https://lottie.host/1a7266ee-974d-4bc3-8a96-18ee91c67639/Z5uFt4qYAb.json">
+            <lottie-player class="lottie_btn_ldr _17_2" err_item_ldr="realtime" src="/documents/realtime-loader-cropped.json">
             </lottie-player>
           </div>
         </div>
