Refactor error indicator and animation source in developers' settings
Refactored error indicator div elements in the developers.html file to reduce complexity. Moved the Lottie animation source from a long-running external URL to local, which should speed up page loads and enhance overall performance. CSS changes were also made to enhance the responsiveness of elements across different screen sizes.

--- a/public/settings/developers.html
+++ b/public/settings/developers.html
@@ -361,15 +361,14 @@ input[type=number] {
     </div>
     <div id="errDivSmall" class="alert_wrp_small sb">
       <div class="w-layout-grid alert_wrp_small_grid">
-        <div id="w-node-fac7a1c4-2b05-b6ea-dc6a-374dbd6bd7bb-e648c042" class="dialog_txt_item">
-          <div err_alert_ind="true" class="err_alert_ind_small orange"></div>
-          <div id="errTxtSmall" class="dialog_txt alt">Error</div>
-        </div>
-        <div id="w-node-fac7a1c4-2b05-b6ea-dc6a-374dbd6bd7bf-e648c042" class="alert_small_grid_item right">
-          <div class="btn_ldr_wrp w-embed">
-            <lottie-player class="lottie_btn_ldr _17_2" err_item_ldr="realtime" src="/documents/realtime-loader-cropped.json">
-            </lottie-player>
+        <div class="dialog_txt_item">
+          <div err_alert_ind="true" class="err_alert_ind_small orange">
+            <div class="btn_ldr_wrp w-embed">
+              <lottie-player class="lottie_btn_ldr realtime" err_item_ldr="realtime" src="../documents/realtime-loader-cropped.json" background="transparent" style="display: flex;">
+              </lottie-player>
+            </div>
           </div>
+          <div id="errTxtSmall" class="dialog_txt alt">Error</div>
         </div>
       </div>
     </div>
